# pygtcha

./: Caddyfile  README.md  pyproject.toml  requirements.txt  tox.ini
doc/: Caddyfile  Caddyfile.test  pygtcha.service  pygtcha.socket  pygtcha.yml
pygtcha/: __init__.py  pygtcha.py
pygtcha/data/: bouffons.yml  deepshit.yml  poobag.yml  porcs.yml  quiches.yml
pygtcha/templates/: base.html.j2  pygtcha.html.j2
